# messenger

./: config.json  grrpcServer.cc  makefile
inc/: handleRequests.h  listener.h  session.h  sessionMeneger.h  user.h  webSession.h
src/: ashxotox.cpp  handleRequests.cpp  listener.cpp  server.cpp  session.cpp  webSession.cpp
src/MESSENGER/registrarion_page/: CMakeLists.txt  InputType.h  chat.grpc.pb.cc  chat.pb.cc  chat.proto  chatmodel.h  chatwidget.cpp  chatwidget.h  customlineEdit.cpp  customlineEdit.h  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  registrarion_page.pro  regwidget.h  regwidjet.cpp  separator.h  validatorfactory.cpp  validatorfactory.h
src/MESSENGER/registrarion_page/cbuild/: CMakeCache.txt
